spacing textarea fix

--- a/themes/icore-open/_index.scss
+++ b/themes/icore-open/_index.scss
@@ -235,7 +235,7 @@ and spacing sets */
   // form
   $form-align-items: flex-start,
   $form-text-color: semantic.$color-text-default,
-  $form-gap: spacing.$spacing-200,
+  $form-gap: spacing.$spacing-100,
   $form-max-width: 40rem,
   $form-table-width: 100%,
 
